<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>
    <PreferenceCategory android:title="@string/preference_category_experimental_settings">

        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="alsoftForceOpenSL"
            android:icon="@drawable/ic_px_dynamic"
            android:title="@string/preference_alsoft_opensl_title"
            android:summary="@string/preference_alsoft_opensl_summary"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="alsoftForceOpenSLCapture"
            android:icon="@drawable/ic_microphone"
            android:title="@string/preference_alsoft_opensl_capture_title"
            android:summary="@string/preference_alsoft_opensl_capture_summary"
            />
        <ListPreference
            android:key="alsoftDriver"
            android:icon="@drawable/ic_microphone"
            android:title="@string/preference_alsoft_driver_title"
            android:summary="@string/preference_alsoft_driver_summary"
            android:entries="@array/alsoft_driver_entries"
            android:entryValues="@array/alsoft_driver_values"
            android:defaultValue=""
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="communicationMode"
            android:icon="@drawable/ic_microphone"
            android:title="@string/preference_communication_mode_title"
            android:summary="@string/preference_communication_mode_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>