<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <TextView
        android:id="@+id/file_manager_path"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/_10ssp"
        android:ellipsize="middle"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/file_manager_up"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/file_manager_up"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_px_arrow_up"
        android:contentDescription="@string/fm_up"
        app:layout_constraintEnd_toStartOf="@id/file_manager_new_folder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/file_manager_path" />

    <ImageButton
        android:id="@+id/file_manager_new_folder"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="4dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_px_folder"
        android:contentDescription="@string/fm_new_folder"
        app:layout_constraintEnd_toStartOf="@id/file_manager_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/file_manager_path" />

    <ImageButton
        android:id="@+id/file_manager_delete"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_px_delete"
        android:contentDescription="@string/fm_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/file_manager_path" />

    <com.kdt.pickafile.FileListView
        android:id="@+id/file_manager_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/file_manager_path"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
